--- a/package.json
+++ b/package.json
@@ -13,10 +13,10 @@
     "@emailjs/browser": "^4.1.0",
     "@fortawesome/fontawesome-free": "^6.5.1",
     "@fortawesome/react-fontawesome": "^0.2.0",
+    "@gsap/react": "^2.1.0",
     "axios": "^1.6.7",
     "emailjs-com": "^3.2.0",
     "gsap": "^3.12.5",
-    "locomotive-scroll": "^4.1.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^5.0.1",
