--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
     "react-parallax": "^3.5.1",
     "react-router-dom": "^6.22.1",
     "react-router-hash-link": "^2.4.3",
-    "react-scroll-parallax": "^3.4.5"
+    "react-scroll-parallax": "^3.4.5",
+    "tailwind-scrollbar": "^3.1.0"
   },
   "devDependencies": {
     "@types/react": "^18.2.55",
