--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@fortawesome/fontawesome-free": "^6.5.1",
     "@fortawesome/react-fontawesome": "^0.2.0",
     "@gsap/react": "^2.1.0",
+    "@headlessui/react": "^1.7.18",
     "@studio-freight/react-lenis": "^0.0.46",
     "axios": "^1.6.7",
     "emailjs-com": "^3.2.0",
