--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "locomotive-scroll": "^4.1.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-fancy-circular-carousel": "^1.0.8",
     "react-icons": "^5.0.1",
     "react-parallax": "^3.5.1",
     "react-router-dom": "^6.22.3",
