--- a/package.json
+++ b/package.json
@@ -28,7 +28,9 @@
     "react-router-dom": "^6.22.3",
     "react-router-hash-link": "^2.4.3",
     "react-scroll-parallax": "^3.4.5",
-    "tailwind-scrollbar": "^3.1.0"
+    "react-tsparticles": "^2.12.2",
+    "tailwind-scrollbar": "^3.1.0",
+    "tsparticles": "^3.5.0"
   },
   "devDependencies": {
     "@types/react": "^18.2.55",
